Add check for node startup through prometheus endpoint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - run: yarn
+      - uses: ifaxity/wait-on-action
+        with:
+          resource: http://localhost:40399/metrics
       - run: yarn test
       - name: Stop containers
         if: always()
